cmake_minimum_required(VERSION 3.10)
project(Proiect2)

set(CMAKE_CXX_STANDARD 11)

add_executable(Proiect2 main.cpp Tourist.cpp Tourist.h Destination.cpp Destination.h extendException.h Activitate.cpp Activitate.h Beach.cpp Beach.h Mountain.cpp Mountain.h Monastery.cpp Monastery.h Museums.cpp Museums.h)